# enshu

./: .gitignore  .gitmodules
aero_devel_lib/: CMakeLists.txt  package.xml
aero_devel_lib/include/aero_devel_lib/: devel_lib.hh
aero_devel_lib/src/: devel_lib.cc
aero_enshu/: CMakeLists.txt  README.md  package.xml
aero_enshu/launch/: hand_caffe.launch  jsk_first_project.launch  pick_caffe.launch
aero_enshu/nodes/: detect_hand.cc  interaction.py
aero_enshu/src/: hand_caffe.cc  jsk_first_project.cc  pick_caffe.cc
negomo_enshu/: .gitmodules  README.md  package.xml
negomo_enshu/config/: negomo.yaml
negomo_enshu/data/: during  during70  initial  initial70
negomo_enshu/examples/launch/: negomo_from_sensors.launch  plot.launch
negomo_enshu/examples/sim/: simulated_person.py  simulated_sensors.py  simulated_speak.py
negomo_enshu/include/negomo/: NegomoLib.hh  NegomoLib2.hh  NegomoPlannerLib.hh
negomo_enshu/lib/: NegomoLib.cc  NegomoLib2.cc  NegomoPlannerLib.cc
negomo_enshu/msg/: NegomoPlot.msg  NegomoSensors.msg  NegomoStatus.msg  NegomoTask.msg  VpActivate.msg  VpConnect.msg
negomo_enshu/nodes/: dummy_sensor_filtering.cc  negomo_bridge.cc  negomo_sensor.cc
negomo_enshu/python/: debug_negomo.py  draw_interactionwi.py  input_speech_noentities.py  negomo_plot2.py  negomo_print.py  negomo_viewplan.py  task_input.py
negomo_enshu/src/: data.hh  main.cc  negomo.cc  negomo.hh  test.cc
negomo_enshu/srv/: BridgeRequest.srv  NegomoService.srv  PartialResultRequest.srv  PlannerActionCall.srv  PlannerBridgeRequest.srv  PlannerDefaultInteractionCall.srv  PlannerInteractionCall.srv  RegisterActions.srv  RobotAction.srv  WaitInterpolationRequest.srv
negomo_enshu/utils/: cmake.setup  create_negomo.sh  gen_header.sh  setup.sh  template.hh  template.hmm
