<?xml version="1.0"?>
<package>
  <name>negomo_utils</name>
  <version>0.0.0</version>
  <description>The negotiation model package</description>

  <maintainer email="ssb@todo.todo">todo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>

  <export>
  </export>
</package>
